data/src/main/java/com/example/data/utilis/errors/UnKnownError.kt
package com.example.data.utilis.errors

class UnKnownError(
    val code: Int? = null,
    override val message: String? = null,
    val messageEN: String? = null,
) : Throwable(message)
